@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 07-Jan-2010 Andrew Eddie
  ^ Removed ability to call JFilterInput statically.
+ # Fixed buggy DB error string in installation.
 
 06-Jan-2010 Hannes Papenberg
 # Fixed default parameters in install-SQL for components
